pufferlib/ocean/airsim2/airsim.h

#define LOG_BUFFER_SIZE 1024
// Forward declare log functions
LogBuffer *allocate_logbuffer(int size);
void free_logbuffer(LogBuffer *buffer);
Log aggregate_and_clear(LogBuffer *logs);
// --- Structures for Simulation Entities ---

// Aircraft structure
typedef struct Aircraft
{
    float x, y, z;
    float vx, vy, vz;
} Aircraft;
// Seeker structure: these missiles use PN guidance and target only the aircraft.
typedef struct Seeker
{
    // Configuration parameters (loaded from YAML)
    int type;           // Categorical, one-hot encoding in observations later.
    float fov;          // Field of view in degrees.
    float track_rate;   // Maximum turn rate (degrees per second).
    float acceleration; // Maximum acceleration.
    float max_velocity;
    float lifetime;            // Total active time in seconds.
    float navigation_constant; // e.g., N value for PN guidance.

    // Dynamic state
    float x, y, z;
    float vx, vy, vz;
    float current_heading; // In degrees, computed from velocity vector.
    bool active;           // If false, seeker is inactive.

    float elapsed_time; // How long it has been active.
} Seeker;
// Laser structure: defensive countermeasure.
typedef struct Laser
{
    // Configuration parameters (loaded from YAML)
    int type;                 // Categorical, one-hot encoding in observation.
    float fov;                // Field of view in degrees.
    float track_rate;         // Slewing speed (degrees per second).
    float guidance_reduction; // How much error is induced per second.
    float maximum_range;      // Maximum effective range.

    // Dynamic state
    int engaging_seeker; // Index of seeker being targeted; -1 if none.
    float az;            // Current azimuth angle.
    float el;            // Current elevation angle.
} Laser;
// Simulation configuration from YAML.
typedef struct SimConfig
{
    // General simulation parameters
    float dt;       // Timestep in seconds.
    float max_time; // Maximum simulation time.
    int max_steps;  // Maximum simulation steps.

    // Aircraft parameters
    float aircraft_x;
    float aircraft_y;
    float aircraft_z;
    float aircraft_vx;
    float aircraft_vy;
    float aircraft_vz;

    // Seeker type parameters: indexed from 1 up to MAX_SEEKERS.
    // We support up to 10 types.
    struct
    {
        float fov;
        float track_rate;
        float acceleration;
        float max_velocity;
        float lifetime;
        float navigation_constant;
    } seeker_types[11];

    // Laser type parameters: indexed from 1 up to MAX_LASERS.
    struct
    {
        float track_rate;
        float fov;
        float guidance_reduction;
        float maximum_range;
    } laser_types[11];

    // Entities: define which seekers and lasers are active and their types.
    int seekers[MAX_SEEKERS]; // For each seeker slot, a type > 0 means active.
    int lasers[MAX_LASERS];   // For each laser slot, type > 0 means active.

    // Initial conditions for aircraft, seekers can also be set here if desired.
} SimConfig;
// Main simulation structure.
typedef struct AirSim
{
    // Simulation time and step
    float time;
    int ticks;
    bool terminal;

    // Entities
    Aircraft aircraft;
    Seeker seekers[MAX_SEEKERS];
    Laser lasers[MAX_LASERS];

    // Environment parameters
    float dt;
    float max_time;
    int max_steps;

    // Observations, actions, rewards, terminals for pufferlib interface.
    // Observations: flat float array. We'll compute:
    // - 6 for aircraft state (position, velocity).
    // - For each seeker (MAX_SEEKERS): 1 (one-hot encoded type: dimension = number of seeker types) + 3 relative pos + 3 relative vel.
    //   For simplicity, assume 10 possible types, so 10 + 6 per seeker.
    // - For each laser (MAX_LASERS): one-hot encoded type (assume 10), plus 1 for engaging_seeker, plus 2 for angles.
    float *observations;
    int *actions; // Array of length MAX_LASERS; each value: target seeker index (-1 means none).
    float *rewards;
    unsigned char *terminals;

    // Log buffer for simulation state logging.
    LogBuffer *log_buffer;
    Log log;

    // YAML configuration used to initialize the simulation.
    SimConfig config;
} AirSim;
/**
 * Main simulation step.
 */
void step(AirSim *sim)
{
    process_actions(sim);
    step_aircraft(sim);
    step_seekers(sim);
    step_lasers(sim);
    compute_reward(sim);
    sim->terminal = check_terminal(sim);
    update_observations(sim);
    sim->time += sim->dt;
    sim->ticks += 1;

    // Add current state to log buffer.
    // For brevity, we log only time and aircraft position.
    Log current_log = {sim->rewards[0], (float)sim->ticks};
    add_log(sim->log_buffer, &current_log);
}
/**
 * Reset simulation to initial state.
 */
void reset(AirSim *sim)
{
    sim->time = 0.0f;
    sim->ticks = 0;
    sim->terminal = false;
    // Reset aircraft from config.
    sim->aircraft.x = sim->config.aircraft_x;
    sim->aircraft.y = sim->config.aircraft_y;
    sim->aircraft.z = sim->config.aircraft_z;
    sim->aircraft.vx = sim->config.aircraft_vx;
    sim->aircraft.vy = sim->config.aircraft_vy;
    sim->aircraft.vz = sim->config.aircraft_vz;

    // Reset seekers.
    for (int i = 0; i < MAX_SEEKERS; i++)
    {
        int t = sim->config.seekers[i];
        if (t > 0)
        {
            sim->seekers[i].type = t;
            sim->seekers[i].fov = sim->config.seeker_types[t].fov;
            sim->seekers[i].track_rate = sim->config.seeker_types[t].track_rate;
            sim->seekers[i].acceleration = sim->config.seeker_types[t].acceleration;
            sim->seekers[i].max_velocity = sim->config.seeker_types[t].max_velocity;
            sim->seekers[i].lifetime = sim->config.seeker_types[t].lifetime;
            sim->seekers[i].navigation_constant = sim->config.seeker_types[t].navigation_constant;
            sim->seekers[i].active = true;
            sim->seekers[i].elapsed_time = 0.0f;
            float angle = ((float)i - (MAX_SEEKERS / 2)) * 5.0f * DEG2RAD;
            float distance = 1000.0f;
            sim->seekers[i].x = sim->aircraft.x + distance * cosf(angle);
            sim->seekers[i].y = sim->aircraft.y + distance * sinf(angle);
            sim->seekers[i].z = sim->aircraft.z - 200.0f;
            float dx = sim->aircraft.x - sim->seekers[i].x;
            float dy = sim->aircraft.y - sim->seekers[i].y;
            float dz = sim->aircraft.z - sim->seekers[i].z;
            float norm = sqrtf(dx * dx + dy * dy + dz * dz);
            sim->seekers[i].vx = (dx / norm) * (sim->seekers[i].max_velocity * 0.5f);
            sim->seekers[i].vy = (dy / norm) * (sim->seekers[i].max_velocity * 0.5f);
            sim->seekers[i].vz = (dz / norm) * (sim->seekers[i].max_velocity * 0.5f);
        }
        else
        {
            sim->seekers[i].active = false;
        }
    }

    // Reset lasers.
    for (int i = 0; i < MAX_LASERS; i++)
    {
        int t = sim->config.lasers[i];
        if (t > 0)
        {
            sim->lasers[i].type = t;
            sim->lasers[i].track_rate = sim->config.laser_types[t].track_rate;
            sim->lasers[i].fov = sim->config.laser_types[t].fov;
            sim->lasers[i].guidance_reduction = sim->config.laser_types[t].guidance_reduction;
            sim->lasers[i].maximum_range = sim->config.laser_types[t].maximum_range;
            sim->lasers[i].engaging_seeker = -1;
            sim->lasers[i].az = 0.0f;
            sim->lasers[i].el = 0.0f;
        }
        else
        {
            sim->lasers[i].type = 0;
            sim->lasers[i].engaging_seeker = -1;
        }
    }
    update_observations(sim);
    sim->rewards[0] = 0.0f;
    sim->terminals[0] = 0;

    // Clear log buffer.
    sim->log_buffer->idx = 0;
}
/**
 * Allocate memory for simulation buffers.
 */
void allocate(AirSim *sim)
{
    // Compute observation size: 6 (aircraft) + MAX_SEEKERS*16 + MAX_LASERS*13.
    int obs_size = 6 + MAX_SEEKERS * 16 + MAX_LASERS * 13;
    sim->observations = (float *)calloc(obs_size, sizeof(float));
    sim->actions = (int *)calloc(MAX_LASERS, sizeof(int));
    sim->rewards = (float *)calloc(1, sizeof(float));
    sim->terminals = (unsigned char *)calloc(1, sizeof(unsigned char));
    sim->log_buffer = allocate_logbuffer(LOG_BUFFER_SIZE);

    // Initialize simulation time.
    sim->time = 0.0f;
    sim->ticks = 0;
    sim->terminal = false;
}
/**
 * Initialize simulation with config loaded.
 */
void init(AirSim *sim)
{
    reset(sim);
}